--- a/librariesBabylonJS.html
+++ b/librariesBabylonJS.html
@@ -12,32 +12,45 @@
     </style>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script>
-        let canvas = document.getElementById("render-canvas");
-        let engine = new BABYLON.Engine(canvas, true);
-        let scene = new BABYLON.Scene(engine);
-        let camera = new BABYLON.ArcRotateCamera("camera", 0, 0, -10, new BABYLON.Vector3(0, 0, 0), scene);
-        let light = new BABYLON.PointLight("light", new BABYLON.Vector3(0, 0, 0), scene);
-        let sphere = BABYLON.MeshBuilder.CreateSphere("sphere", { diameter: 2 }, scene);
-        sphere.position = new BABYLON.Vector3(0, 0, 5);
-        let material = new BABYLON.StandardMaterial("material", scene);
-        sphere.material = material;
+        window.addEventListener('DOMContentLoaded', function () {
+            let canvas = document.getElementById('render-canvas');
+            let engine = new BABYLON.Engine(canvas, true);
 
-        engine.runRenderLoop(function () {
-            scene.render();
+            let createScene = function () {
+                let scene = new BABYLON.Scene(engine);
+
+                let camera = new BABYLON.ArcRotateCamera('camera', 0, 0, -10, new BABYLON.Vector3(0, 0, 0), scene);
+                camera.attachControl(canvas, true);
+
+                let light = new BABYLON.PointLight("light", new BABYLON.Vector3(0, 0, 0), scene);
+
+                const sphere = BABYLON.MeshBuilder.CreateSphere("sphere", { diameter: 2 }, scene);
+                sphere.position = new BABYLON.Vector3(0, 0, 5);
+                const material = new BABYLON.StandardMaterial("material", scene);
+                sphere.material = material;
+
+
+                return scene;
+            }
+
+            let scene = createScene();
+
+            window.addEventListener('resize', function () {
+                engine.resize();
+            });
+
+            window.addEventListener('touchend', () => {
+                Sphere.position.y -= 0.1;
+                //sphere.scaling.y += 0.3;
+                sphere.rotation.x += 0.1;
+
+            });
+
+
+            engine.runRenderLoop(function () {
+                scene.render();
+            });
         });
-
-        window.addEventListener("resize", function () {
-            engine.resize();
-        });
-
-        window.addEventListener('touchend', () => {
-            box.position.y -= 0.1;
-            // box.scaling.y += 0.3;
-            box.rotation.x += 0.1;
-        });
-
-
-
     </script>
 </body>
 
